--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 	    "laracasts/utilities": "~2.1",
 		"arcanedev/log-viewer": "~3.5.0",
 		"creativeorange/gravatar": "~1.0",
-		"davejamesmiller/laravel-breadcrumbs": "^3.0"
+		"davejamesmiller/laravel-breadcrumbs": "^3.0",
+		"caffeinated/themes": "~2.0"
 	},
 	"require-dev": {
 	  	"symfony/dom-crawler": "~3.0",
@@ -30,7 +31,8 @@
 			"database"
 		],
 		"psr-4": {
-			"App\\": "app/"
+			"App\\": "app/",
+			"Mikimaine\\Demo\\": "packages/Mikimaine/Demo/src/"
 		},
         "files": [
             "app/helpers.php"
