--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
 		],
 		"psr-4": {
 			"App\\": "app/",
+		    "Innovate\\":"app/innovate",
 			"Mikimaine\\Demo\\": "packages/Mikimaine/Demo/src/"
 		},
         "files": [
@@ -62,5 +63,12 @@
 	},
 	"config": {
 		"preferred-install": "dist"
-	}
+	},
+  "repositories": [
+  {
+	"type": "composer",
+	"url": "https://packagist.org"
+  },
+  { "packagist": false }
+]
 }
