--- a/composer.json
+++ b/composer.json
@@ -85,7 +85,7 @@
 	"config": {
 		"preferred-install": "dist"
 	},
-  "minimum-stability": "stable",
+  "stability": "stable",
   "repositories": [
   {
 	"type": "composer",
