--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,7 @@
 		"psr-4": {
 			"App\\": "app/",
 		    "Innovate\\":"app/innovate",
-			"Mikimaine\\Demo\\": "packages/Mikimaine/Demo/src/"
+			//"Mikimaine\\Demo\\": "packages/Mikimaine/Demo/src/"
 		},
         "files": [
             "app/helpers.php"
@@ -85,7 +85,6 @@
 	"config": {
 		"preferred-install": "dist"
 	},
-  "stability": "stable",
   "repositories": [
   {
 	"type": "composer",
