--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,11 @@
 		"yajra/laravel-datatables-oracle": "~6.0",
 		"sofa/eloquence": " ~5.2@dev",
 		"spatie/activitylog": "^2.4",
-		"spatie/laravel-url-signer": "^1.1"
+		"spatie/laravel-url-signer": "^1.1",
+		"intervention/image": "^2.3",
+		"intervention/imagecache": "^2.3",
+		"spatie/laravel-backup": "^3.2",
+		"mpociot/laravel-test-factory-helper": "^0.1.0"
 	},
 	"require-dev": {
 	  	"symfony/dom-crawler": "~3.0",
@@ -67,19 +71,19 @@
 	},
 	"scripts": {
 		"post-install-cmd": [
-			"php artisan clear-compiled",
-			"php artisan optimize"
+			"php innovate clear-compiled",
+			"php innovate optimize"
 		],
         "pre-update-cmd": [
-            "php artisan clear-compiled",
-		    "php artisan ide-helper:generate"
+            "php innovate clear-compiled"
         ],
 		"post-update-cmd": [
-			"php artisan optimize"
+		  "php innovate optimize",
+		  "php innovate ide-helper:generate"
 		],
 		"post-create-project-cmd": [
 			"php -r \"copy('.env.example', '.env');\"",
-			"php artisan key:generate"
+			"php innovate key:generate"
 		]
 	},
 	"config": {
