--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
 		"intervention/image": "^2.3",
 		"intervention/imagecache": "^2.3",
 		"spatie/laravel-backup": "^3.2",
-		"mpociot/laravel-test-factory-helper": "^0.1.0"
+		"mpociot/laravel-test-factory-helper": "^0.1.0",
+		"gloudemans/shoppingcart": "^1.3"
 	},
 	"require-dev": {
 	  	"symfony/dom-crawler": "~3.0",
