--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
 		"spatie/laravel-backup": "^3.2",
 		"mpociot/laravel-test-factory-helper": "^0.1.0",
 		"gloudemans/shoppingcart": "^1.3",
-		"propaganistas/laravel-translatable-bootforms": "^1.3"
+		"propaganistas/laravel-translatable-bootforms": "^1.3",
+	     "devio/eavquent": "dev-master"
 	},
 	"require-dev": {
 	  	"symfony/dom-crawler": "~3.0",
@@ -59,14 +60,15 @@
 		],
 		"psr-4": {
 			"App\\": "app/",
-		    "Innovate\\":"app/innovate",
-			"Mikimaine\\Demo\\": "packages/Mikimaine/Demo/src/"
+		    "Innovate\\":"app/Innovate",
+			"Mikimaine\\Demo\\": "packages/mikimaine/demo/src/"
 		},
         "files": [
             "app/helpers.php"
         ]
 	},
 	"autoload-dev": {
+
 		"classmap": [
 			"tests/TestCase.php"
 		]
