--- a/composer.json
+++ b/composer.json
@@ -1,101 +1,113 @@
 {
-	"name": "mikimaine/ecommerce",
-	"description": "The Laravel Ecommerce Framework.",
-	"keywords": ["framework", "laravel", "ecommerce","Ethiopia","innovate","innovate ecommerce","laravel ecommerce"],
-	"license": "MIT",
+    "name": "mikimaine/ecommerce",
+    "description": "The Laravel Ecommerce Framework.",
+    "keywords": [
+        "framework",
+        "laravel",
+        "ecommerce",
+        "Ethiopia",
+        "innovate",
+        "innovate ecommerce",
+        "laravel ecommerce"
+    ],
+    "license": "MIT",
     "version": "0.0.1",
-	"type": "project",
-	"authors": [
-	  {
-		"name": "Mikiyas Amdu",
-		"email": "mikias.amdu@gmail.com",
-		"homepage": "https://github.com/mikimaine/ecommerce",
-		"role": "Developer"
-	  }
-	],
-	"require": {
-	    "php" : ">=5.6.0",
-		"laravel/framework": "5.2.*",
+    "type": "project",
+    "authors": [
+        {
+            "name": "Mikiyas Amdu",
+            "email": "mikias.amdu@gmail.com",
+            "homepage": "https://github.com/mikimaine/ecommerce",
+            "role": "Developer"
+        }
+    ],
+    "require": {
+        "php": ">=5.6.0",
+        "laravel/framework": "5.2.*",
         "laravelcollective/html": "5.2.*",
-        "laravel/socialite" : "~2.0",
+        "laravel/socialite": "~2.0",
         "stripe/stripe-php": "~3.4.0",
         "hieu-le/active": "~2.0",
-		"doctrine/dbal": "~2.5",
-	    "laracasts/utilities": "~2.1",
-		"arcanedev/log-viewer": "~3.7.0",
-		"creativeorange/gravatar": "~1.0",
-		"davejamesmiller/laravel-breadcrumbs": "^3.0",
-		"caffeinated/themes": "~2.0",
-		"symfony/css-selector": "~2.1",
-		"cviebrock/eloquent-sluggable": "^3.1",
-		"dimsav/laravel-translatable": "^5.5",
-		"barryvdh/laravel-ide-helper": "^2.1",
-		"spatie/laravel-tail": "^1.1",
-		"artesaos/seotools": "^0.8.2",
-		"orangehill/iseed": "^2.1",
-		"yajra/laravel-datatables-oracle": "~6.0",
-		"sofa/eloquence": " ~5.2@dev",
-		"spatie/activitylog": "^2.4",
-		"spatie/laravel-url-signer": "^1.1",
-		"intervention/image": "^2.3",
-		"intervention/imagecache": "^2.3",
-		"spatie/laravel-backup": "^3.2",
-		"mpociot/laravel-test-factory-helper": "^0.1.0",
-		"gloudemans/shoppingcart": "^1.3",
-		"propaganistas/laravel-translatable-bootforms": "^1.3",
-	     "devio/eavquent": "dev-master"
-	},
-	"require-dev": {
-	  	"symfony/dom-crawler": "~3.0",
-		"fzaninotto/faker": "~1.4",
+        "doctrine/dbal": "~2.5",
+        "laracasts/utilities": "~2.1",
+        "arcanedev/log-viewer": "~3.7.0",
+        "creativeorange/gravatar": "~1.0",
+        "davejamesmiller/laravel-breadcrumbs": "^3.0",
+        "caffeinated/themes": "~2.0",
+        "symfony/css-selector": "~2.1",
+        "cviebrock/eloquent-sluggable": "^3.1",
+        "dimsav/laravel-translatable": "^5.5",
+        "barryvdh/laravel-ide-helper": "^2.1",
+        "spatie/laravel-tail": "^1.1",
+        "artesaos/seotools": "^0.8.2",
+        "orangehill/iseed": "^2.1",
+        "yajra/laravel-datatables-oracle": "~6.0",
+        "sofa/eloquence": " ~5.2@dev",
+        "spatie/activitylog": "^2.4",
+        "spatie/laravel-url-signer": "^1.1",
+        "intervention/image": "^2.3",
+        "intervention/imagecache": "^2.3",
+        "spatie/laravel-backup": "^3.2",
+        "mpociot/laravel-test-factory-helper": "^0.1.0",
+        "gloudemans/shoppingcart": "^1.3",
+        "propaganistas/laravel-translatable-bootforms": "^1.3",
+        "devio/eavquent": "dev-master"
+    },
+    "require-dev": {
+        "symfony/dom-crawler": "~3.0",
+        "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.0",
         "phpspec/phpspec": "~2.1",
-        "barryvdh/laravel-debugbar": "^2.0"
-	},
-	"autoload": {
-		"classmap": [
-			"database",
-		    "tests/Testcase.php"
-		],
-		"psr-4": {
-			"App\\": "app/",
-		    "Innovate\\":"app/Innovate"
-		},
+        "barryvdh/laravel-debugbar": "^2.0",
+        "xethron/migrations-generator": "dev-l5",
+        "way/generators": "dev-feature/laravel-five-stable"
+    },
+    "autoload": {
+        "classmap": [
+            "database",
+            "tests/Testcase.php"
+        ],
+        "psr-4": {
+            "App\\": "app/",
+            "Innovate\\": "app/Innovate"
+        },
         "files": [
             "app/helpers.php"
         ]
-	},
-	"autoload-dev": {
-
-		"classmap": [
-			"tests/TestCase.php"
-		]
-	},
-	"scripts": {
-		"post-install-cmd": [
-			"php innovate clear-compiled",
-			"php innovate optimize"
-		],
+    },
+    "autoload-dev": {
+        "classmap": [
+            "tests/TestCase.php"
+        ]
+    },
+    "scripts": {
+        "post-install-cmd": [
+            
+        ],
         "pre-update-cmd": [
             "php innovate clear-compiled"
         ],
-		"post-update-cmd": [
-		  "php innovate optimize",
-		  "php innovate ide-helper:generate"
-		],
-		"post-create-project-cmd": [
-			"php -r \"copy('.env.example', '.env');\"",
-			"php innovate key:generate"
-		]
-	},
-	"config": {
-		"preferred-install": "dist"
-	},
-  "repositories": [
-  {
-	"type": "composer",
-	"url": "https://packagist.org"
-  }
-   ]
+        "post-update-cmd": [
+            "php innovate optimize",
+            "php innovate ide-helper:generate"
+        ],
+        "post-create-project-cmd": [
+            "php -r \"copy('.env.example', '.env');\"",
+            "php innovate key:generate"
+        ]
+    },
+    "config": {
+        "preferred-install": "dist"
+    },
+    "repositories": {
+        "0": {
+            "type": "composer",
+            "url": "https://packagist.org"
+        },
+        "repo-name": {
+            "type": "git",
+            "url": "git@github.com:jamisonvalenta/Laravel-4-Generators.git"
+        }
+    }
 }
