--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,12 @@
-/vendor
 /node_modules
-/public/css/frontend.css
-/public/css/frontend.css.map
-/public/css/backend.css
-/public/css/backend.css.map
-/public/js/frontend.js
-/public/js/frontend.js.map
-/public/js/backend.js
-/public/js/backend.js.map
-Homestead.yaml
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+/.idea
+/.vagrant
 Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
 .env
-/.DS_Store
-/Thumbs.db
-/*.sublime-project
-/*.sublime-workspace
-.idea
-.project
-_ide_helper.php
-composer.phar
-error.log
-Todo.rtf
